static/css/autocomplete.css
.autocomplete {
    /*the container must be positioned relative:*/
    position: relative;
}

::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 7px;
    margin-right: 4px;

}
::-webkit-scrollbar-thumb {
    border-radius: 4px;
    margin-right: 4px;
    background-color: rgba(0,0,0,.5);
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}


.autocomplete-items {
    position: absolute;
    border: 1px solid #d4d4d4;
    /* border-bottom: none; */
    border-top: none;
    z-index: 5000;
    /*position the autocomplete items to be the same width as the container:*/
    top: 100%;
    left: 0;
    right: 0;

    max-height: 500px; /*modify the value to fit your needs, 80px is the position of your floating button*/
    overflow-y: auto;
    /* prevent horizontal scrollbar */
    overflow-x: hidden;
    /* add padding to account for vertical scrollbar */
    /* padding-right: 20px; */

}

.autocomplete-items div {
    padding: 10px;
    cursor: pointer;
    background-color: #fff;
    border-bottom: 1px solid #d4d4d4;
}

.autocomplete-items div:hover {
    /*when hovering an item:*/
    background-color: #e9e9e9;
}

.autocomplete-active {
    /*when navigating through the items using the arrow keys:*/
    background-color: DodgerBlue !important;
    color: #ffffff;
}

